--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+#dotenv enviroment
+.env
+.env.dev
+.env.test
+
 # Runtime data
 pids
 *.pid
