--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tuber-ears-backend",
+  "name": "delivery-service-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "cross-env NODE_ENV=prod nest start",
+    "start": "cross-env NODE_ENV=dev nest start",
     "start:dev": "cross-env NODE_ENV=dev nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -24,20 +24,29 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.2",
     "@nestjs/core": "^7.5.1",
-    "@nestjs/graphql": "^7.9.5",
+    "@nestjs/graphql": "^7.9.8",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/schedule": "^0.4.3",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/jsonwebtoken": "^8.5.0",
     "apollo-server-express": "^2.19.2",
+    "aws-sdk": "^2.947.0",
+    "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
     "cross-env": "^7.0.3",
+    "form-data": "^3.0.0",
+    "got": "^11.8.1",
     "graphql": "^15.4.0",
+    "graphql-subscriptions": "^1.2.1",
     "graphql-tools": "^7.0.2",
     "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
+    "tailwindcss": "^2.2.4",
     "typeorm": "^0.2.30"
   },
   "devDependencies": {
@@ -63,6 +72,9 @@
     "typescript": "^4.0.5"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
@@ -77,6 +89,11 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "node_modules",
+      ".entity.ts",
+      ".constants.ts"
+    ]
   }
 }
