--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,9 @@ web_modules/
 
 # dotenv environment variables file
 .env
+.env.dev
 .env.test
+.prod.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
